@@ -1,5 +1,10 @@
 ChangeLog for 2.53.1
 
+//Beta 49
+Slight changes to the directItem init when loading quests, that
+	now checks if the prior quest was a B+A subscreen type. 
+	( ZoriaRPG, 23rd May, 2020 
+
 //Beta 48
 Fixed a memory leak when compiling scripts and exiting out of
 	the assign scripts dialogue with Cancel.
